--- a/age-check.liquid
+++ b/age-check.liquid
@@ -7,7 +7,7 @@ Adults only (18+)
 {% endcapture %}
 
 {% capture adult_text %}
-This website contains adult material and is only suitable for those 18 years or older. Click Enter only if you are at least 18 years of age.
+Shop Love Galore Warning!This website contains adult material and is only suitable for those 18 years or older. Click Enter only if you are at least 18 years of age.
 {% endcapture %}
 
 <div id="prompt-background">
